--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+hex = { version = "0.4.3" }
 alloy-primitives = { version = "1" }
 bon = { version = "3" }
 crypto-bigint = { version = "0.6", features = ["serde"] }
@@ -13,4 +14,4 @@ thiserror = { version = "2" }
 url = { version = "2" }
 solana-sdk = { version = "3" }
 chrono = { version = "0.4", default-features = false, features = ["std"] }
-hex = "0.4.3"
+base64 = { version = "0.22" }
