--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 thiserror = { version = "2" }
 url = { version = "2" }
-solana-sdk = { version = "3" }
+solana-pubkey = { version = "4" }
+solana-signature = { version = "3" }
 chrono = { version = "0.4", default-features = false, features = ["std"] }
 base64 = { version = "0.22" }
