chore: lock deps to minor version

--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -4,15 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-hex = { version = "0.4.3" }
-alloy-primitives = { version = "1" }
-bon = { version = "3" }
+# === Core Deps ===
+hex = { version = "0.4" }
+alloy-primitives = { version = "1.4" }
+bon = { version = "3.8" }
 crypto-bigint = { version = "0.6", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
-thiserror = { version = "2" }
-url = { version = "2" }
-solana-pubkey = { version = "4" }
-solana-signature = { version = "3" }
+thiserror = { version = "2.0" }
+url = { version = "2.5" }
+solana-pubkey = { version = "4.0" }
+solana-signature = { version = "3.1" }
 chrono = { version = "0.4", default-features = false, features = ["std"] }
 base64 = { version = "0.22" }
