chore: update repo metadata

--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -2,6 +2,9 @@
 name = "x402-kit"
 version = "0.1.0"
 edition = "2024"
+repository = "https://github.com/AIMOverse/x402-kit"
+authors = ["Archer <archer@aimo.network>"]
+license = "MIT"
 
 [dependencies]
 # === Core Deps ===
