--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "x402-kit"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 repository = "https://github.com/AIMOverse/x402-kit"
 authors = ["Archer <archer@aimo.network>"]
 license = "MIT"
+description = "A fully modular SDK for building complex X402 payment integrations."
 
 [dependencies]
 # === Core Deps ===
