--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -18,7 +18,7 @@ alloy-primitives = { version = "1.4" }
 bon = { version = "3.8" }
 # crypto-bigint = { version = "0.6", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0" }
+serde_json = { version = "1.0", features = ["preserve_order"] }
 thiserror = { version = "2.0" }
 url = { version = "2.5" }
 solana-pubkey = { version = "4.0" }
