--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -8,9 +8,10 @@ license = "MIT"
 description = "A fully modular SDK for building complex X402 payment integrations."
 
 [features]
-default = ["facilitator-client", "log-tracing"]
+default = ["facilitator-client", "log-tracing", "evm-signer"]
 facilitator-client = ["reqwest"]
 log-tracing = ["tracing"]
+evm-signer = ["alloy-core", "alloy-signer", "rand"]
 
 [dependencies]
 # === Core Deps ===
@@ -31,8 +32,14 @@ tracing = { version = "0.1", optional = true }
 # === Feature "facilitator-client" ===
 reqwest = { version = "0.12", optional = true, features = ["json"] }
 
+# === Feature "evm-signer" ===
+alloy-core = { version = "1.4", features = ["sol-types"], optional = true }
+alloy-signer = { version = "1.1", optional = true }
+rand = { version = "0.9", optional = true }
+
 [dev-dependencies]
 url-macro = { version = "0.2" }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 axum = { version = "0.8" }
 tracing-subscriber = { version = "0.3" }
+alloy = { version = "1" }
