--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -8,11 +8,20 @@ license = "MIT"
 description = "A fully modular SDK for building complex X402 payment integrations."
 
 [features]
-default = ["facilitator-client", "tracing", "evm-signer", "svm-signer"]
+default = [
+    "facilitator-client",
+    "tracing",
+    "evm-signer",
+    "svm-signer",
+    "seller",
+    "axum",
+]
 facilitator-client = ["dep:reqwest"]
 tracing = ["dep:tracing"]
 evm-signer = ["dep:alloy-core", "dep:alloy-signer", "dep:rand"]
 svm-signer = ["dep:bincode"]
+seller = ["dep:http"]
+axum = ["seller", "dep:tower", "dep:axum"]
 
 [dependencies]
 # === Core Deps ===
@@ -40,6 +49,13 @@ rand = { version = "0.9", optional = true }
 
 # === Feature "svm-signer" ===
 bincode = { version = "2.0", features = ["serde"], optional = true }
+
+# === Feature "axum" ===
+axum = { version = "0.8", optional = true }
+tower = { version = "0.5", optional = true }
+
+# === Feature "seller" ===
+http = { version = "1.4", optional = true }
 
 [dev-dependencies]
 url-macro = { version = "0.2" }
