--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,42 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # adjust to your feature list
+        features:
+          - ""                # no extra features
+          - "facilitator-client"
+          - "tracing"
+          - "evm-signer"
+          - "svm-signer"
+          - "seller"
+          - "axum"
+          - "all"             # marker for all features
+    steps:
+      - uses: actions/checkout@v6
+      - name: Set up Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - name: Build with features = ${{ matrix.features }}
+        run: |
+          if [ "${{ matrix.features }}" = "all" ]; then
+            cargo build --release --all-features
+          elif [ "${{ matrix.features }}" = "" ]; then
+            cargo build --release --no-default-features
+          else
+            cargo build --release --no-default-features --features "${{ matrix.features }}"
+          fi
   fmt:
     name: stable / fmt
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Install Rust stable
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -32,7 +62,7 @@ jobs:
       checks: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Install Rust stable
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -55,7 +85,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Install Rust stable
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -78,7 +108,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Install Rust stable
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -89,4 +119,13 @@ jobs:
         run: cargo doc --no-deps --all-features
         env:
           RUSTDOCFLAGS: -D warnings
+
+  test-docs:
+    needs: check
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@v6
+    - uses: dtolnay/rust-toolchain@stable
+    - name: Run doc tests
+      run: cargo test --all-features --doc
 
