--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -21,7 +21,7 @@ facilitator-client = ["dep:reqwest", "dep:http"]
 tracing = ["dep:tracing"]
 evm-signer = ["dep:alloy-core", "dep:alloy-signer", "dep:rand"]
 svm-signer = ["dep:bincode"]
-seller = ["dep:http"]
+seller = ["dep:http", "dep:http-body-util", "dep:bytes"]
 axum = ["seller", "dep:tower", "dep:axum"]
 v1 = []
 
@@ -58,6 +58,10 @@ tower = { version = "0.5", optional = true }
 
 # === Feature "seller" | "facilitator-client" ===
 http = { version = "1.4", optional = true }
+
+# === Feature "seller"
+http-body-util = { version = "0.1", optional = true }
+bytes = { version = "1.11", optional = true }
 
 [dev-dependencies]
 url-macro = { version = "0.2" }
