--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "x402-kit"
-version = "0.3.2"
+version = "1.0.0"
 edition = "2024"
 repository = "https://github.com/AIMOverse/x402-kit"
 authors = ["Archer <archer@aimo.network>"]
@@ -8,22 +8,11 @@ license = "MIT"
 description = "A fully modular SDK for building complex X402 payment integrations."
 
 [features]
-default = [
-    "facilitator-client",
-    "tracing",
-    "evm-signer",
-    "svm-signer",
-    "seller",
-    "axum",
-    "v1",
-]
+default = ["facilitator-client", "tracing", "evm-signer", "svm-signer"]
 facilitator-client = ["dep:reqwest", "dep:http"]
 tracing = ["dep:tracing"]
 evm-signer = ["dep:alloy-core", "dep:alloy-signer", "dep:rand"]
 svm-signer = ["dep:bincode"]
-seller = ["dep:http", "dep:http-body-util", "dep:bytes"]
-axum = ["seller", "dep:tower", "dep:axum"]
-v1 = []
 
 [dependencies]
 # === Core Deps ===
@@ -52,16 +41,8 @@ rand = { version = "0.9", optional = true }
 # === Feature "svm-signer" ===
 bincode = { version = "2.0", features = ["serde"], optional = true }
 
-# === Feature "axum" ===
-axum = { version = "0.8", optional = true }
-tower = { version = "0.5", optional = true }
-
-# === Feature "seller" | "facilitator-client" ===
+# === Feature "facilitator-client" ===
 http = { version = "1.4", optional = true }
-
-# === Feature "seller"
-http-body-util = { version = "0.1", optional = true }
-bytes = { version = "1.11", optional = true }
 
 [dev-dependencies]
 url-macro = { version = "0.2" }
