--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-x402-kit:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -21,9 +21,6 @@ jobs:
           - "tracing"
           - "evm-signer"
           - "svm-signer"
-          - "seller"
-          - "axum"
-          - "v1"
           - "all" # marker for all features
     steps:
       - uses: actions/checkout@v6
@@ -34,11 +31,11 @@ jobs:
       - name: Build with features = ${{ matrix.features }}
         run: |
           if [ "${{ matrix.features }}" = "all" ]; then
-            cargo build --release --all-features
+            cargo build -p x402-kit --release --all-features
           elif [ "${{ matrix.features }}" = "" ]; then
-            cargo build --release --no-default-features
+            cargo build -p x402-kit --release --no-default-features
           else
-            cargo build --release --no-default-features --features "${{ matrix.features }}"
+            cargo build -p x402-kit --release --no-default-features --features "${{ matrix.features }}"
           fi
   fmt:
     runs-on: ubuntu-latest
