--- a/crates/x402-paywall/Cargo.toml
+++ b/crates/x402-paywall/Cargo.toml
@@ -8,8 +8,9 @@ license = "MIT"
 description = "A fully modular SDK for building complex X402 payment integrations."
 
 [features]
-default = ["tracing"]
+default = ["tracing", "axum"]
 tracing = ["dep:tracing"]
+axum = ["dep:axum", "dep:tower"]
 
 [dependencies]
 x402-kit = { version = "2.0", path = "../x402-kit", default-features = false }
@@ -19,3 +20,15 @@ tracing = { version = "0.1", optional = true }
 http-body-util = { version = "0.1" }
 bytes = { version = "1.11" }
 serde_json = { version = "1.0" }
+axum = { version = "0.8", optional = true }
+tower = { version = "0.5", optional = true }
+
+[dev-dependencies]
+url = { version = "2.5" }
+url-macro = { version = "0.2" }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+axum = { version = "0.8" }
+tracing-subscriber = { version = "0.3" }
+alloy = { version = "1" }
+x402-kit = { path = "../x402-kit" }
+tower-http = { version = "0.6", features = ["trace"] }
