--- a/crates/x402-paywall/Cargo.toml
+++ b/crates/x402-paywall/Cargo.toml
@@ -10,18 +10,15 @@ description = "A fully modular SDK for building complex X402 payment integration
 [features]
 default = ["tracing", "axum"]
 tracing = ["dep:tracing"]
-axum = ["dep:axum", "dep:tower"]
+axum = ["dep:axum"]
 
 [dependencies]
 x402-kit = { version = "2.0", path = "../x402-kit", default-features = false }
 http = { version = "1.4" }
 bon = { version = "3.8" }
 tracing = { version = "0.1", optional = true }
-http-body-util = { version = "0.1" }
-bytes = { version = "1.11" }
 serde_json = { version = "1.0" }
 axum = { version = "0.8", optional = true }
-tower = { version = "0.5", optional = true }
 
 [dev-dependencies]
 url = { version = "2.5" }
@@ -32,3 +29,4 @@ tracing-subscriber = { version = "0.3" }
 alloy = { version = "1" }
 x402-kit = { path = "../x402-kit" }
 tower-http = { version = "0.6", features = ["trace"] }
+futures-util = { version = "0.3" }
