--- a/crates/x402-paywall/Cargo.toml
+++ b/crates/x402-paywall/Cargo.toml
@@ -30,3 +30,4 @@ alloy = { version = "1" }
 x402-kit = { path = "../x402-kit" }
 tower-http = { version = "0.6", features = ["trace"] }
 futures-util = { version = "0.3" }
+solana-pubkey = { version = "4" }
