chore: update docs and workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
         features:
           - "" # no extra features
           - "tracing"
+          - "axum"
           - "all" # marker for all features
     steps:
       - uses: actions/checkout@v6
