--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["crates/x402-kit", "crates/x402-paywall"]
+members = ["crates/x402-core","crates/x402-kit", "crates/x402-paywall"]
