--- a/crates/x402-kit/Cargo.toml
+++ b/crates/x402-kit/Cargo.toml
@@ -8,13 +8,16 @@ license = "MIT"
 description = "A fully modular SDK for building complex X402 payment integrations."
 
 [features]
-default = ["facilitator-client", "evm-signer", "svm-signer"]
+default = ["facilitator-client", "evm-signer", "svm-signer", "paywall"]
 facilitator-client = ["dep:reqwest", "dep:http"]
 evm-signer = ["dep:alloy-core", "dep:alloy-signer", "dep:rand"]
 svm-signer = ["dep:bincode"]
+paywall = ["dep:x402-paywall"]
+axum = ["dep:x402-paywall", "x402-paywall/axum"]
 
 [dependencies]
 # === Core Deps ===
+x402-core = { path = "../x402-core" }
 hex = { version = "0.4" }
 alloy-primitives = { version = "1.4" }
 bon = { version = "3.8" }
@@ -24,7 +27,6 @@ thiserror = { version = "2.0" }
 url = { version = "2.5" }
 solana-pubkey = { version = "4.0" }
 solana-signature = { version = "3.1" }
-base64 = { version = "0.22" }
 
 # === Feature "facilitator-client" ===
 reqwest = { version = "0.12", optional = true, features = ["json"] }
@@ -40,6 +42,17 @@ bincode = { version = "2.0", features = ["serde"], optional = true }
 # === Feature "facilitator-client" ===
 http = { version = "1.4", optional = true }
 
+# === Feature "paywall" ===
+x402-paywall = { path = "../x402-paywall", optional = true, default-features = false }
+
 [dev-dependencies]
 alloy = { version = "1" }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+url = { version = "2.5" }
+url-macro = { version = "0.2" }
+axum = { version = "0.8" }
+tracing-subscriber = { version = "0.3" }
+tower-http = { version = "0.6", features = ["trace"] }
+futures-util = { version = "0.3" }
+solana-pubkey = { version = "4" }
+tracing = { version = "0.1" }
