chore: add new features of x402-kit to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
           - "facilitator-client"
           - "evm-signer"
           - "svm-signer"
+          - "paywall"
+          - "axum"
           - "all" # marker for all features
     steps:
       - uses: actions/checkout@v6
