--- a/x402-kit/Cargo.toml
+++ b/x402-kit/Cargo.toml
@@ -56,3 +56,4 @@ tower-http = { version = "0.6", features = ["trace"] }
 futures-util = { version = "0.3" }
 solana-pubkey = { version = "4" }
 tracing = { version = "0.1" }
+actix-web = "4"
