--- a/x402-kit/Cargo.toml
+++ b/x402-kit/Cargo.toml
@@ -8,12 +8,13 @@ license = "MIT"
 description = "(V2 Supported) A fully modular SDK for building complex X402 payment integrations."
 
 [features]
-default = ["facilitator-client", "evm-signer", "svm-signer", "axum"]
+default = ["facilitator-client", "evm-signer", "svm-signer", "axum", "actix-web"]
 facilitator-client = ["dep:reqwest", "dep:http"]
 evm-signer = ["dep:alloy-core", "dep:alloy-signer", "dep:rand"]
 svm-signer = ["dep:bincode"]
 paywall = ["dep:x402-paywall"]
 axum = ["paywall", "x402-paywall/axum"]
+actix-web = ["paywall", "x402-paywall/actix-web"]
 
 [dependencies]
 # === Core Deps ===
