--- a/x402-core/Cargo.toml
+++ b/x402-core/Cargo.toml
@@ -9,7 +9,7 @@ description = "(V2 Supported) A fully modular SDK for building complex X402 paym
 
 [dependencies]
 bon = { version = "3.8" }
-url = { version = "2.5" }
+url = { version = "2.5", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = { version = "2.0" }
 serde_json = { version = "1.0", features = ["preserve_order"] }
