--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
           - "svm-signer"
           - "paywall"
           - "axum"
+          - "actix-web"
           - "all" # marker for all features
     steps:
       - uses: actions/checkout@v6
